# Instantid-mobile

./: .gitignore  README.md  setup.sh
ip_adapter/: attention_processor.py
mobile/cpp/: CMakeLists.txt  face_processor.cpp  face_processor.h  instantid_pipeline.cpp  instantid_pipeline.h
notebooks/: convert_to_ipynb.py  instantid_h200.ipynb  instantid_mobile.ipynb  instantid_tpu_v5e.ipynb  instantid_tpu_v5e.py
scripts/: convert_for_onnxstream.py  export_all.py  fuse_lcm_lora.py  quantize_all.py  test_onnx_pipeline.py
